--- a/JSP/src/main/webapp/ex08Request.html
+++ b/JSP/src/main/webapp/ex08Request.html
@@ -8,7 +8,7 @@
 	<h1>JSP로 데이터 전송</h1>
 
 	<!-- 데이터 전송 조건 3가지 : action, name, submit + method
-	from태그 action 문자열 -> 이 문자열을 가진 servlet 찾기
+	form태그 action 문자열 -> 이 문자열을 가진 servlet 찾기
 	확장자 써주어야 .jsp파일로 가게됨  -->
 	<form action="ex08Request.jsp" method="get">
 	<input type="text" name="data">
